# miner-u-service

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements-all.txt  requirements.txt
kubernetes/: stateful.yml
src/: main.py  my_service.py
